@@ -21,25 +21,25 @@ Index: virtualbox/src/VBox/Frontends/VirtualBox/src/globals/UIActionPool.cpp
 --- virtualbox.orig/src/VBox/Frontends/VirtualBox/src/globals/UIActionPool.cpp	2013-11-19 03:42:12.725479132 -0500
 +++ virtualbox/src/VBox/Frontends/VirtualBox/src/globals/UIActionPool.cpp	2013-11-19 03:42:12.721479132 -0500
 @@ -650,7 +650,6 @@
-     m_pool[UIActionIndex_Simple_WebSite] = new UIActionSimpleWebSite(this);
      m_pool[UIActionIndex_Simple_ResetWarnings] = new UIActionSimpleResetWarnings(this);
+ #ifdef VBOX_GUI_WITH_NETWORK_MANAGER
      m_pool[UIActionIndex_Simple_NetworkAccessManager] = new UIActionSimpleNetworkAccessManager(this);
 -    m_pool[UIActionIndex_Simple_CheckForUpdates] = new UIActionSimpleCheckForUpdates(this);
+ #endif /* VBOX_GUI_WITH_NETWORK_MANAGER */
      m_pool[UIActionIndex_Simple_About] = new UIActionSimpleAbout(this);
  }
- 
 Index: virtualbox/src/VBox/Frontends/VirtualBox/src/globals/UIActionPool.h
 ===================================================================
 --- virtualbox.orig/src/VBox/Frontends/VirtualBox/src/globals/UIActionPool.h	2013-11-19 03:42:12.725479132 -0500
 +++ virtualbox/src/VBox/Frontends/VirtualBox/src/globals/UIActionPool.h	2013-11-19 03:42:12.721479132 -0500
 @@ -58,7 +58,6 @@
-     UIActionIndex_Simple_WebSite,
      UIActionIndex_Simple_ResetWarnings,
+ #ifdef VBOX_GUI_WITH_NETWORK_MANAGER
      UIActionIndex_Simple_NetworkAccessManager,
 -    UIActionIndex_Simple_CheckForUpdates,
+ #endif /* VBOX_GUI_WITH_NETWORK_MANAGER */
      UIActionIndex_Simple_About,
  
-     /* Maximum index: */
 Index: virtualbox/src/VBox/Frontends/VirtualBox/src/selector/UISelectorWindow.cpp
 ===================================================================
 --- virtualbox.orig/src/VBox/Frontends/VirtualBox/src/selector/UISelectorWindow.cpp	2013-11-19 03:42:12.725479132 -0500
@@ -54,17 +54,17 @@ Index: virtualbox/src/VBox/Frontends/VirtualBox/src/selector/UISelectorWindow.cp
 -        pMenu->addAction(m_pUpdateAction);
 -    else
 -        m_pUpdateAction->setEnabled(false);
+ #endif /* VBOX_GUI_WITH_NETWORK_MANAGER */
  #ifndef Q_WS_MAC
      pMenu->addSeparator();
- #endif /* !Q_WS_MAC */
 @@ -1462,7 +1456,6 @@
-     connect(m_pWebAction, SIGNAL(triggered()), &msgCenter(), SLOT(sltShowHelpWebDialog()));
      connect(m_pResetWarningsAction, SIGNAL(triggered()), &msgCenter(), SLOT(sltResetSuppressedMessages()));
+ #ifdef VBOX_GUI_WITH_NETWORK_MANAGER
      connect(m_pNetworkAccessManager, SIGNAL(triggered()), gNetworkManager, SLOT(show()));
 -    connect(m_pUpdateAction, SIGNAL(triggered()), gUpdateManager, SLOT(sltForceCheck()));
+ #endif /* VBOX_GUI_WITH_NETWORK_MANAGER */
      connect(m_pAboutAction, SIGNAL(triggered()), &msgCenter(), SLOT(sltShowHelpAboutDialog()));
  
-     /* Status-bar connections: */
 Index: virtualbox/src/VBox/Frontends/VirtualBox/src/settings/UISettingsDialogSpecific.cpp
 ===================================================================
 --- virtualbox.orig/src/VBox/Frontends/VirtualBox/src/settings/UISettingsDialogSpecific.cpp	2013-11-19 03:42:12.725479132 -0500
